--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </div>
         </div>
         <!-- javascript -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/app.js"></script>
+        <!-- <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/app.js"></script> -->
     </body>
 </html>
