menu and js change

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <p>&mdash;  Our core mission is to help safety managers.</p>
                         <p>&mdash; Discover new ways to lead your workers to safety.</p>
                         <br>
-                        &copy; 2016. All Rights Reserved.
+                        &copy; Mechetronz. All Rights Reserved.
                     </div>
                     <div class="me-footer__col">
                         <address>
@@ -195,7 +195,7 @@
             </div>
         </div>
         <!-- javascript -->
-        <!-- <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/app.js"></script> -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/app.js"></script>
     </body>
 </html>
