--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="me-header__container">
                 <nav class="me-header__nav">
                     <div class="me-header__brand">
-                	   <a href="/" title="StartupMafia" class="me-header__logo">Mechetronz</a>
+                	   <a href="/" title="Mechetronz" class="me-header__logo">Mechetronz</a>
                     </div>
                     <ul class="me-menu">
                         <li><a href="#">Safety Product</a></li>
@@ -108,7 +108,7 @@
             </div>
         </div>
 
-        <div class="me-section me-section--push me-section--img" style="background-image: url(assets/images/section-product.jpg);">
+        <div class="me-section me-section--push me-section--img" style="background-image: url(assets/images/wide/section-product.jpg);">
             <div class="me-container">
                 <section>
                     <h1 class="me-section__title">Transport Service</h1>
@@ -130,7 +130,7 @@
                                             Seaters - 7
                                         </div>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/innova.jpg);flex:2;"></div>
+                                    <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/innova.jpg);flex:2;"></div>
                                 </div>
                             </li>
                         </ul>
@@ -144,7 +144,7 @@
                                             Seaters - 9
                                         </div>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/tavera.jpg);"></div>
+                                    <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/tavera.jpg);"></div>
                                 </div>
                             </li>
                         </ul>
@@ -158,7 +158,7 @@
                                             Seaters - 12
                                         </div>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/traveller.jpg);flex:2;"></div>
+                                    <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/traveller.jpg);flex:2;"></div>
                                 </div>
                             </li>
                         </ul>
@@ -170,7 +170,7 @@
             <div class="me-container">
                 <div class="me-footer__row">
                     <div class="me-footer__col" style="flex:1.5;">
-                        <div><img src="assets/images/mechetronz.svg" width="100" alt="mechetronz"></div>
+                        <div><img src="assets/images/brand/mechetronz-white.svg" width="100" alt="mechetronz"></div>
                         <br>
                         <p>&mdash; Leading safety solutions in the marketplace today.</p>
                         <p>&mdash;  Our core mission is to help safety managers.</p>
@@ -195,7 +195,7 @@
             </div>
         </div>
         <!-- javascript -->
-        <script src="assets/js/jquery.min.js"></script>
+<!--         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/app.js"></script>
-    </body>
+ -->    </body>
 </html>
