--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <div class="me-header__brand">
                 	   <a href="/" title="Mechetronz" class="me-header__logo">Mechetronz</a>
                     </div>
-                    <ul class="me-menu">
+                    <ul class="me-nav">
                         <li><a href="#">Safety Product</a></li>
-                        <li class="me-menu__inner"><a href="#">Transport Service</a>
+                        <li class="me-nav__inner"><a href="#">Transport Service</a>
                             <ul>
                                 <li><a href="#">Innova</a></li>
                                 <li><a href="#">Tavera</a></li>
