--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Leading Satefy Solutions | Mechetronz</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -12,10 +12,10 @@
         <!-- header -->
         <header class="me-header">
             <div class="me-header__container">
-                <nav class="me-header__nav">
-                    <div class="me-header__brand">
-                	   <a href="/" title="Mechetronz" class="me-header__logo">Mechetronz</a>
-                    </div>
+                <div class="me-header__brand">
+                   <a href="/" title="Mechetronz" class="me-header__logo">Mechetronz</a>
+                </div>
+                <nav class="me-header__nav">                    
                     <ul class="me-nav">
                         <li><a href="#">Safety Product</a></li>
                         <li class="me-nav__inner"><a href="#">Transport Service</a>
@@ -27,10 +27,14 @@
                         </li>
                         <li><a href="#">About</a></li>
                     </ul>
-                </nav>
-                <nav class="me-header__nav">
-                    <a href="tel:9600769625">96007 69625</a>
-                    <a href="mailto:mechetronz@yahoo.com">mechetronz@yahoo.com</a>
+                    <ul class="me-nav">
+                        <li>
+                            <a href="tel:9600769625">96007 69625</a>
+                        </li>
+                        <li>
+                            <a href="mailto:mechetronz@yahoo.com">mechetronz@yahoo.com</a>
+                        </li>
+                    </ul>
                 </nav>
             </div>
         </header>
@@ -38,14 +42,13 @@
         <div class="me-banner">
             <div class="me-container">
                 <section class="me-banner__content">
-                    <h2 class="me-banner__title">
+                    <p class="me-banner__title">
                         Protect what's important.
-                    </h2>
-                    <!-- <p class="me-banner__quote">&mdash; Leading safety solutions in the marketplace today</p>
-                    <p class="me-banner__quote">&mdash;  Our core mission is to help safety managers</p> -->
-                    <!-- <p class="me-banner__quote">Protect what's important.</p> -->
-                   <!--  <br>
-                    <a href="#safety-gloves" class="me-btn me-btn--ghost me-btn--lg">Goto Products</a> -->
+                    </p>
+                    <h1 class="me-banner__quote">Leading safety solutions in the marketplace today</h1>
+                    <p class="me-banner__quote">Our core mission is to help safety managers</p>                     
+                    <br>
+                    <a href="#safety-gloves" class="me-banner__launch">Goto Products &rarr;</a>
                 </section>
             </div>
         </div>
@@ -123,11 +126,17 @@
                         <ul class="alt">
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content" style="height: 300px;">
-                                        <div>
+                                    <div class="me-product__content">
+                                        <div class="me-product__list">
                                             <h2 class="me-product__title">Innova</h2>
-                                            Driver Fee Per Day - Rs.150<br>
-                                            Seaters - 7
+                                            <div class="me-product__item">
+                                                <div class="me-product__label">Driver Fee Per Day</div>
+                                                <div class="me-product__value">Rs.180</div>
+                                            </div>
+                                            <div class="me-product__item">
+                                                <div class="me-product__label">Seaters</div> 
+                                                <div class="me-product__value">7</div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/innova.jpg);flex:2;"></div>
@@ -137,11 +146,17 @@
                         <ul>
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content" style="height: 300px;flex:2;">
-                                        <div>
+                                    <div class="me-product__content" style="flex:2;">
+                                        <div class="me-product__list">
                                             <h2 class="me-product__title">Tavera</h2>
-                                            Driver Fee Per Day - Rs.150<br>
-                                            Seaters - 9
+                                            <div class="me-product__item">
+                                                <div class="me-product__label">Driver Fee Per Day</div>
+                                                <div class="me-product__value">Rs.150</div>
+                                            </div>
+                                            <div class="me-product__item">
+                                                <div class="me-product__label">Seaters</div> 
+                                                <div class="me-product__value">9</div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/tavera.jpg);"></div>
@@ -151,11 +166,17 @@
                         <ul class="alt">
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content" style="height: 300px;">
-                                        <div>
+                                    <div class="me-product__content">                                        
+                                        <div class="me-product__list">
                                             <h2 class="me-product__title">Force</h2>
-                                            Driver Fee Per Day - Rs.150<br>
-                                            Seaters - 12
+                                            <div class="me-product__item">
+                                                <div class="me-product__label">Driver Fee Per Day</div>
+                                                <div class="me-product__value">Rs.250</div>
+                                            </div>
+                                            <div class="me-product__item">
+                                                <div class="me-product__label">Seaters</div> 
+                                                <div class="me-product__value">12</div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/traveller.jpg);flex:2;"></div>
