header affix js

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
         </div>
         <!-- javascript -->
-<!--         <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/app.js"></script>
- -->    </body>
+    </body>
 </html>
