--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Leading Satefy Solutions | Mechetronz</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Leading Satefy Solutions | Mechetronz</title>
-        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <link rel="icon" href="assets/images/brand/mechetronz-icon-brand.png" type="image/png">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
@@ -15,7 +16,7 @@
                 <div class="me-header__brand">
                    <a href="/" title="Mechetronz" class="me-header__logo">Mechetronz</a>
                 </div>
-                <nav class="me-header__nav">                    
+                <nav class="me-header__nav">
                     <ul class="me-nav">
                         <li><a href="#">Safety Product</a></li>
                         <li class="me-nav__inner"><a href="#">Transport Service</a>
@@ -46,7 +47,7 @@
                         Protect what's important.
                     </p>
                     <h1 class="me-banner__quote">Leading safety solutions in the marketplace today</h1>
-                    <p class="me-banner__quote">Our core mission is to help safety managers</p>                     
+                    <p class="me-banner__quote">Our core mission is to help safety managers</p>
                     <br>
                     <a href="#safety-gloves" class="me-banner__launch">Goto Products &rarr;</a>
                 </section>
@@ -134,7 +135,7 @@
                                                 <div class="me-product__value">Rs.180</div>
                                             </div>
                                             <div class="me-product__item">
-                                                <div class="me-product__label">Seaters</div> 
+                                                <div class="me-product__label">Seaters</div>
                                                 <div class="me-product__value">7</div>
                                             </div>
                                         </div>
@@ -154,7 +155,7 @@
                                                 <div class="me-product__value">Rs.150</div>
                                             </div>
                                             <div class="me-product__item">
-                                                <div class="me-product__label">Seaters</div> 
+                                                <div class="me-product__label">Seaters</div>
                                                 <div class="me-product__value">9</div>
                                             </div>
                                         </div>
@@ -166,7 +167,7 @@
                         <ul class="alt">
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content">                                        
+                                    <div class="me-product__content">
                                         <div class="me-product__list">
                                             <h2 class="me-product__title">Force</h2>
                                             <div class="me-product__item">
@@ -174,7 +175,7 @@
                                                 <div class="me-product__value">Rs.250</div>
                                             </div>
                                             <div class="me-product__item">
-                                                <div class="me-product__label">Seaters</div> 
+                                                <div class="me-product__label">Seaters</div>
                                                 <div class="me-product__value">12</div>
                                             </div>
                                         </div>
