--- a/index.html
+++ b/index.html
@@ -127,16 +127,20 @@
                         <ul class="alt">
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content">
+                                    <div class="me-product__content" style="height: 320px;">
                                         <div class="me-product__list">
-                                            <h2 class="me-product__title">Innova</h2>
+                                            <h2 class="me-product__title">Innova <span>(7 seaters)</span></h2>
                                             <div class="me-product__item">
                                                 <div class="me-product__label">Driver Fee Per Day</div>
                                                 <div class="me-product__value">Rs.180</div>
                                             </div>
                                             <div class="me-product__item">
-                                                <div class="me-product__label">Seaters</div>
-                                                <div class="me-product__value">7</div>
+                                                <div class="me-product__label">Per km. AC</div>
+                                                <div class="me-product__value">Rs.16</div>
+                                            </div>
+                                            <div class="me-product__item">
+                                                <div class="me-product__label">Per km. Non-AC</div>
+                                                <div class="me-product__value">Rs.14</div>
                                             </div>
                                         </div>
                                     </div>
@@ -147,16 +151,20 @@
                         <ul>
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content" style="flex:2;">
+                                    <div class="me-product__content" style="height: 320px; flex:2;">
                                         <div class="me-product__list">
-                                            <h2 class="me-product__title">Tavera</h2>
+                                            <h2 class="me-product__title">Tavera <span>(9 seaters)</span></h2>
                                             <div class="me-product__item">
                                                 <div class="me-product__label">Driver Fee Per Day</div>
                                                 <div class="me-product__value">Rs.150</div>
                                             </div>
                                             <div class="me-product__item">
-                                                <div class="me-product__label">Seaters</div>
-                                                <div class="me-product__value">9</div>
+                                                <div class="me-product__label">Per km. AC</div>
+                                                <div class="me-product__value">Rs.14</div>
+                                            </div>
+                                            <div class="me-product__item">
+                                                <div class="me-product__label">Per km. Non-AC</div>
+                                                <div class="me-product__value">Rs.12</div>
                                             </div>
                                         </div>
                                     </div>
@@ -167,16 +175,20 @@
                         <ul class="alt">
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content">
+                                    <div class="me-product__content" style="height: 320px;">
                                         <div class="me-product__list">
-                                            <h2 class="me-product__title">Force</h2>
+                                            <h2 class="me-product__title">Force <span>(12 seaters)</span></h2>
                                             <div class="me-product__item">
                                                 <div class="me-product__label">Driver Fee Per Day</div>
                                                 <div class="me-product__value">Rs.250</div>
                                             </div>
                                             <div class="me-product__item">
-                                                <div class="me-product__label">Seaters</div>
-                                                <div class="me-product__value">12</div>
+                                                <div class="me-product__label">Per km. AC</div>
+                                                <div class="me-product__value">Rs.16</div>
+                                            </div>
+                                            <div class="me-product__item">
+                                                <div class="me-product__label">Per km. Non-AC</div>
+                                                <div class="me-product__value">Rs.14</div>
                                             </div>
                                         </div>
                                     </div>
