--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <ul class="alt">
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content">
+                                    <div class="me-product__content me-product__content--alt">
                                         <div>
                                             <h2 class="me-product__title">Premium Leather Glove</h2>
                                             Our selection of Economy Leather Palm Gloves have various cuff styles and options such as insulated.
@@ -97,7 +97,7 @@
                             </li>
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content">
+                                    <div class="me-product__content me-product__content--alt">
                                         <div>
                                             <h2 class="me-product__title">Economy Leather Palm Gloves</h2>
                                             Galeton understands how important it is to protect your workers with the strongest.
@@ -127,44 +127,108 @@
                         <ul class="alt">
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content" style="height: 320px;">
-                                        <div class="me-product__list">
+                                    <div class="me-product__content me-product__content--alt" style="height: 360px;">
+                                        <div>
                                             <h2 class="me-product__title">Innova <span>(7 seaters)</span></h2>
-                                            <div class="me-product__item">
-                                                <div class="me-product__label">Driver Fee Per Day</div>
-                                                <div class="me-product__value">Rs.180</div>
+                                            <div class="me-product__table">
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Local Travel Tariff</div>
+                                                    <div class="me-product__col">AC</div>
+                                                    <div class="me-product__col">Non AC</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">8 Hr / 80 KM</div>
+                                                    <div class="me-product__col">Rs.2300</div>
+                                                    <div class="me-product__col">Rs.2100</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Extra Hour</div>
+                                                    <div class="me-product__col">Rs.150</div>
+                                                    <div class="me-product__col">Rs.150</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Extra KM</div>
+                                                    <div class="me-product__col">Rs.12</div>
+                                                    <div class="me-product__col">Rs.12</div>
+                                                </div>
                                             </div>
-                                            <div class="me-product__item">
-                                                <div class="me-product__label">Per km. AC</div>
-                                                <div class="me-product__value">Rs.16</div>
-                                            </div>
-                                            <div class="me-product__item">
-                                                <div class="me-product__label">Per km. Non-AC</div>
-                                                <div class="me-product__value">Rs.14</div>
+                                            <div class="me-product__table">
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Outstation Travel Tariff</div>
+                                                    <div class="me-product__col">AC</div>
+                                                    <div class="me-product__col">Non AC</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Min. KM Per Day</div>
+                                                    <div class="me-product__col">300 KM</div>
+                                                    <div class="me-product__col">300 KM</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Rate per KM</div>
+                                                    <div class="me-product__col">Rs. 12</div>
+                                                    <div class="me-product__col">Rs. 12</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Driver Bata</div>
+                                                    <div class="me-product__col">Rs.300</div>
+                                                    <div class="me-product__col">Rs.300</div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/innova.jpg);flex:2;"></div>
+                                    <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/innova.jpg);"></div>
                                 </div>
                             </li>
                         </ul>
                         <ul>
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content" style="height: 320px; flex:2;">
-                                        <div class="me-product__list">
+                                    <div class="me-product__content" style="height: 360px;">
+                                        <div>
                                             <h2 class="me-product__title">Tavera <span>(9 seaters)</span></h2>
-                                            <div class="me-product__item">
-                                                <div class="me-product__label">Driver Fee Per Day</div>
-                                                <div class="me-product__value">Rs.150</div>
+                                            <div class="me-product__table">
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Local Travel Tariff</div>
+                                                    <div class="me-product__col">AC</div>
+                                                    <div class="me-product__col">Non AC</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">8 Hr / 80 KM</div>
+                                                    <div class="me-product__col">Rs.2300</div>
+                                                    <div class="me-product__col">Rs.2000</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Extra Hour</div>
+                                                    <div class="me-product__col">Rs.150</div>
+                                                    <div class="me-product__col">Rs.150</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Extra KM</div>
+                                                    <div class="me-product__col">Rs.12</div>
+                                                    <div class="me-product__col">Rs.11</div>
+                                                </div>
                                             </div>
-                                            <div class="me-product__item">
-                                                <div class="me-product__label">Per km. AC</div>
-                                                <div class="me-product__value">Rs.14</div>
-                                            </div>
-                                            <div class="me-product__item">
-                                                <div class="me-product__label">Per km. Non-AC</div>
-                                                <div class="me-product__value">Rs.12</div>
+                                            <div class="me-product__table">
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Outstation Travel Tariff</div>
+                                                    <div class="me-product__col">AC</div>
+                                                    <div class="me-product__col">Non AC</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Min. KM Per Day</div>
+                                                    <div class="me-product__col">300 KM</div>
+                                                    <div class="me-product__col">300 KM</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Rate per KM</div>
+                                                    <div class="me-product__col">Rs. 12</div>
+                                                    <div class="me-product__col">Rs. 11</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Driver Bata</div>
+                                                    <div class="me-product__col">Rs.300</div>
+                                                    <div class="me-product__col">Rs.300</div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -175,24 +239,56 @@
                         <ul class="alt">
                             <li>
                                 <div class="me-product">
-                                    <div class="me-product__content" style="height: 320px;">
-                                        <div class="me-product__list">
+                                    <div class="me-product__content me-product__content--alt" style="height: 360px;">
+                                        <div>
                                             <h2 class="me-product__title">Force <span>(12 seaters)</span></h2>
-                                            <div class="me-product__item">
-                                                <div class="me-product__label">Driver Fee Per Day</div>
-                                                <div class="me-product__value">Rs.250</div>
+                                            <div class="me-product__table">
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Local Travel Tariff</div>
+                                                    <div class="me-product__col">AC</div>
+                                                    <div class="me-product__col">Non AC</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">8 Hr / 80 KM</div>
+                                                    <div class="me-product__col">Rs.3000</div>
+                                                    <div class="me-product__col">Rs.2700</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Extra Hour</div>
+                                                    <div class="me-product__col">Rs.250</div>
+                                                    <div class="me-product__col">Rs.200</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Extra KM</div>
+                                                    <div class="me-product__col">Rs.15</div>
+                                                    <div class="me-product__col">Rs.13</div>
+                                                </div>
                                             </div>
-                                            <div class="me-product__item">
-                                                <div class="me-product__label">Per km. AC</div>
-                                                <div class="me-product__value">Rs.16</div>
-                                            </div>
-                                            <div class="me-product__item">
-                                                <div class="me-product__label">Per km. Non-AC</div>
-                                                <div class="me-product__value">Rs.14</div>
+                                            <div class="me-product__table">
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Outstation Travel Tariff</div>
+                                                    <div class="me-product__col">AC</div>
+                                                    <div class="me-product__col">Non AC</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Min. KM Per Day</div>
+                                                    <div class="me-product__col">300 KM</div>
+                                                    <div class="me-product__col">300 KM</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Rate per KM</div>
+                                                    <div class="me-product__col">Rs. 15</div>
+                                                    <div class="me-product__col">Rs. 13</div>
+                                                </div>
+                                                <div class="me-product__row">
+                                                    <div class="me-product__col">Driver Bata</div>
+                                                    <div class="me-product__col">Rs.350</div>
+                                                    <div class="me-product__col">Rs.350</div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/traveller.jpg);flex:2;"></div>
+                                    <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/traveller.jpg);"></div>
                                 </div>
                             </li>
                         </ul>
