--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                 </div>
                 <nav class="me-header__nav">
                     <ul class="me-nav">
-                        <li><a href="#">Safety Product</a></li>
-                        <li class="me-nav__inner"><a href="#">Transport Service</a>
+                        <li><a>Safety Product</a></li>
+                        <li class="me-nav__inner"><a>Transport Service</a>
                             <ul>
-                                <li><a href="#">Innova</a></li>
-                                <li><a href="#">Tavera</a></li>
-                                <li><a href="#">Force</a></li>
+                                <li><a>Innova</a></li>
+                                <li><a>Tavera</a></li>
+                                <li><a>Force</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">About</a></li>
+                        <li><a>About</a></li>
                     </ul>
                     <ul class="me-nav">
                         <li>
